--- a/1011.html
+++ b/1011.html
@@ -1,23 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-
-th, td {
-  padding: 10px;
-  border: 2px solid black;
-  border-style: double;
-  text-align: center;
-  border: 1px solid rgb(0, 0, 0);
-}
-
-tr {
-    background-color: #dde6cc; 
-    color: black;
-    align-content: center;
-}
-
-</style>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -25,7 +9,7 @@ tr {
 <table style="width:100%">
     
       <tr>
-        <th colspan="6" style="background-color: #3e7676; color: aliceblue;" >Table Titile</th>
+        <th class="top" colspan="6"  >Table Titile</th>
       </tr>
       <colgroup span:56>
       <tr>
@@ -38,15 +22,15 @@ tr {
         <td>6</td>
       </tr>
       <tr>
-        <th colspan="3" style="background-color: #89ab71; color: aliceblue;">7</th>
-        <th colspan="3" style="background-color: #89ab71; color: aliceblue;">8</th>
+        <th class="span" colspan="3" >7</th>
+        <th class="span" colspan="3" >8</th>
       </tr>
       <tr>
-        <td rowspan="2" style="background-color: #89ab71; color: aliceblue;">9</td>
+        <td class="span" rowspan="2" >9</td>
         <td>10</td>
-        <td rowspan="2" style="background-color: #89ab71; color: aliceblue;">11</td>
+        <td class="span" rowspan="2">11</td>
         <td>12</td>
-        <td rowspan="2" style="background-color: #89ab71; color: aliceblue;">13</td>
+        <td class="span" rowspan="2" >13</td>
         <td>14</td>
       </tr>
       <tr>
@@ -64,7 +48,7 @@ tr {
       </tr>
       <tr>
         <td >24</td>
-        <td colspan="4" rowspan="3" style="background-color: #89ab71; color: aliceblue;">25</td>
+        <td class="span" colspan="4" rowspan="3" >25</td>
         <td>25</td>
         </tr>
       <tr>
@@ -76,7 +60,7 @@ tr {
         <td>29</td>
       </tr>
       <tr>
-        <th colspan="6" style="background-color: #3e7676; color: aliceblue;">Table footnote</th>
+        <th class="top" colspan="6">Table footnote</th>
       </tr>
 
 </table>
